# trf

./: ANNOUNCE  ChangeLog  ChangeLog.short  DEPENDS  DESCRIPTION  LSM  Makefile.in  PORTING  PREPARE  README  README.md  configure  configure.in  customers  teapot.txt  trf.m4
app/: tclAppInit.c
compat/: des.h  md2.h  rc2.h  tclLoadAout.c  tclLoadDyld.c  tclLoadShl.c  tclLoadWin.c  zlib.h
doc/: INSTALL  INSTALL.optional  Makefile.zlib.aout  Notes  ROADMAP  ToDo  ascii.man  binio.proposal  capibase  defs.tex  install.tex  man.tex  rs_ecc.man  trf.def  trf.xpm
doc/common/: trf_version.inc
doc/nodes/: ack.node  binio.node  bz.node  cmds.node  compile.node  conv.node  copyright.node  crypto.node  danger.node  future.node  home.node  install.node  intro.node  libdes.node  links.def  logo.node  mac.node  man.tex  markup.def  md.node  misc.node  missing  node.structure  patch.node  people.def  required.def  seek.node  shortcut.def  ssleay.node  tea.node  techintro.node  transform.node  unix.node  up.def  urls.def  where.node  win.node  zip.node
doc/nodes/img/: smiley.xpm  smiley16.xpm
generic/: adler.c  asc85code.c  b64code.c  bc_opt.c  bc_util.c  bincode.c  binio.c  blockcipher.c  blowfish.c  bz2.c  bz2_opt.c  bz2lib.c  c_opt.c  c_util.c  cipher.c  convert.c  crc.c  crc_zlib.c  crypt.c  des.c  dig_opt.c  digest.c  haval.c  hexcode.c  idea.c  init.c  libdes.c  load.c  loadman.c  loadman.h  md2.c  md5.c  md5dig.c  octcode.c  otpcode.c  otpmd5.c  patchlevel.h  pkgIndex.tcl.in  qpcode.c  rc2.c  (+23 more)
generic/haval.1996/: haval.c
generic/sha/: sha.c  sha.h
generic/templates/: bc_template.c  c_template.c  cvt_template.c  md_template.c  opt_template.c
mac/: README
mails/: nijtmans.4  rose.qp.3
md5-crypt/: crypt-entry.c  crypt.h  md5-crypt.c  md5.c  md5c-test.c  trf_crypt.h  trf_features.h.orig
patches/: core7.6.patch.byteorder  rc.h  tclIO.c-8.0a2
patches/v7.6/: standard.patch  tclIO.c
patches/v7.6p2/: tclIO.c
patches/v8.0/: standard.patch  tclIO.c
patches/v8.0.4/: standard.patch  tcl.h  tclIO.c
patches/v8.0.5/: standard.patch  tcl.h
patches/v8.0a1/: byteorder.patch
patches/v8.0a2/: byteorder.patch
patches/v8.1/: standard.patch  tcl.decls  tclDecls.h  tclIO.c  tclStubInit.c
patches/v8.1.1/: README
patches/v8.1a2/: standard.patch  tclIO.c
patches/v8.1b1/: byteorder.patch  standard.patch  tcl.h  tclIO.c
patches/v8.1b2/: standard.patch  tcl.decls  tcl.h  tclDecls.h  tclIO.c  tclStubInit.c  tclStubs.c
patches/v8.1b3/: standard.patch  tcl.decls  tclDecls.h  tclIO.c  tclStubInit.c
tclconfig/: tcl.m4
tea/: Makefile.in  README  aclocal.m4  configure.in  mkIndex.tcl.in  tcl.m4  test.setup.in  trf.m4
tea.tests/: README  ________  adler_bb.test  ascii85_bb.test  base64_bb.test  bin_bb.test  binio_bb.test  bz2_bb.test  common_all.test  common_conv.test  common_md.test  common_seek.test  crc_bb.test  crc_zlib_bb.test  haval_bb.test  hex_bb.test  md2_bb.test  md5_bb.test  md5_crash.test  oct_bb.test  otp_md5_bb.test  otp_sha1_bb.test  otp_words_bb.test  rmd128_bb.test  rmd160_bb.test  rs_ecc_bb.test  sha1_bb.test  sha_bb.test  transform_bb.test  uu_bb.test  zip_bb.test
tests/: ________  adler.test  all  ascii85.test  base64.test  bin.test  binio.test  blowfish.test  bz2.test  common.all.test  common.bc.test  common.conv.test  common.md.test  common_seek.test  crc.test  crc_zlib.test  defs  des.test  haval.test  hex.test  idea.test  md2.test  md5.test  md5_crash.test  oct.test  otp_words.test  otpmd5.test  otpsha1.test  rc4.test  rmd128.test  rmd160.test  rot.test  rs_ecc.test  safer.test  sha.test  sha1.test  transform.test  uu.test  zip.test
tools/: check_manifest  demo  gen-config  get-manifest  htdocs_setup  ldAout.tcl  md  mmencode  skip-trash  svfiles  watch_cvs
tools/rules/: manpage.html.site  manpage.tmml  site  trf  xmlrules.tcl
unix/: Makefile.in  README  configure.in  pkgIndex.tcl.in
win/: Makefile.cross  Makefile.gnu  README  makefile.vc  makefile.vc5  pkgIndex.tcl  trf.rc
zlib.vc/: dllentry.c  makefile.vc  zconf.h  zlib.h  zlib.header.patch
